<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="true">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

    <TimePicker
        android:id="@+id/alarm_detail_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/alarm_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:textSize="18sp"
        android:hint="@string/alarm_detail_name_hint"/>

        <View
            android:id="@+id/divider_week"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/alarm_details_name" />
        <RelativeLayout
            android:id="@+id/repeat_days_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/alarm_detail_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/alarm_detail_label_repeat" />

            <TextView
                android:id="@+id/alarm_detail_label_all_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_repeat"
                android:text="@string/alarm_detail_label_all_week" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_all_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_all_week"/>

            <TextView
                android:id="@+id/alarm_detail_label_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/alarm_detail_label_all_week"
                android:text="@string/alarm_detail_label_sunday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_sunday"/>

            <TextView
                android:id="@+id/alarm_detail_label_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_sunday"
                android:text="@string/alarm_detail_label_monday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_monday"/>

            <TextView
                android:id="@+id/alarm_detail_label_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_monday"
                android:text="@string/alarm_detail_label_tuesday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_tuesday"/>

            <TextView
                android:id="@+id/alarm_detail_label_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_tuesday"
                android:text="@string/alarm_detail_label_wednesday" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_wednesday"/>

            <TextView
                android:id="@+id/alarm_detail_label_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_wednesday"
                android:text="@string/alarm_detail_label_thursday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_thursday"/>

            <TextView
                android:id="@+id/alarm_detail_label_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_thursday"
                android:text="@string/alarm_detail_label_friday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_friday"/>

            <TextView
                android:id="@+id/alarm_detail_label_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/alarm_detail_label_friday"
                android:text="@string/alarm_detail_label_saturday" />
            <CheckBox
                android:id="@+id/alarm_detail_chk_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/alarm_detail_label_saturday"/>
            <View
                android:id="@+id/divider_ringtone"
                style="@style/Divider"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_detail_label_saturday"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/divider_ringtone">

                <TextView
                    android:id="@+id/alarm_detail_label_ringtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/alarm_detail_label_ringtone" />
                <TextView
                    android:id="@+id/alarm_detail_current_ringtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/alarm_detail_label_ringtone"
                    android:layout_marginTop="5dp"
                    android:text="@string/alarm_detail_label_ringtone_pick" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
